chore: language migrations
the citrusframework exists quit long and a lot of things have changed with the continuous improvement of java. this commit removes some old-fashioned code from previous versions, that can be done otherwise in JDK 17.